--- a/public/404.html
+++ b/public/404.html
@@ -78,7 +78,7 @@
           color: #3A4145;
      }
      .post-holder {
-          background: #f2efe8;
+          background: #fff;
      }
      body {
           color: #3A4145;
